--- a/index.html
+++ b/index.html
@@ -71,60 +71,9 @@
         </div>
         
         <!-- all recipes -->
-        <div class="col 12 recipe">
+        <div class="col 12 recipe" id="recipes">
             <h1>Latest Recipes</h1>
-            <div class="col 12 recipe-first" > 
-                  <div class="card recipe-card">
-                        <img src="grey.jpg" class="card-img-top" alt="..." height="250px">
-                        <div class="card-body">
-                        <h5 class="card-title">Card title</h5>
-                        <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-                        <a href="#" class="btn btn-primary">Go somewhere</a>
-                        </div>
-                  </div>
-                  <div class="card recipe-card">
-                    <img src="grey.jpg" class="card-img-top" alt="..." height="250px">
-                    <div class="card-body">
-                      <h5 class="card-title">Card title</h5>
-                      <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-                      <a href="#" class="btn btn-primary">Go somewhere</a>
-                    </div>
-                  </div>
-                  <div class="card recipe-card">
-                    <img src="grey.jpg" class="card-img-top" alt="..." height="250px">
-                    <div class="card-body">
-                      <h5 class="card-title">Card title</h5>
-                      <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-                      <a href="#" class="btn btn-primary">Go somewhere</a>
-                    </div>
-                  </div>
-            </div>
-            <div class="col 12 recipe-first" > 
-                <div class="card recipe-card">
-                      <img src="grey.jpg" class="card-img-top" alt="..." height="250px">
-                      <div class="card-body">
-                      <h5 class="card-title">Card title</h5>
-                      <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-                      <a href="#" class="btn btn-primary">Go somewhere</a>
-                      </div>
-                </div>
-                <div class="card recipe-card">
-                  <img src="grey.jpg" class="card-img-top" alt="..." height="250px">
-                  <div class="card-body">
-                    <h5 class="card-title">Card title</h5>
-                    <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-                    <a href="#" class="btn btn-primary">Go somewhere</a>
-                  </div>
-                </div>
-                <div class="card recipe-card">
-                  <img src="grey.jpg" class="card-img-top" alt="..." height="250px">
-                  <div class="card-body">
-                    <h5 class="card-title">Card title</h5>
-                    <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-                    <a href="#" class="btn btn-primary">Go somewhere</a>
-                  </div>
-                </div>
-          </div>
+            <!-- recipe part from js -->
         </div>
     </div>
 
@@ -166,5 +115,6 @@
 
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js" integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.min.js" integrity="sha384-0pUGZvbkm6XF6gxjEnlmuGrJXVbNuzT9qBBavbLwCsOGabYfZo0T0to5eqruptLy" crossorigin="anonymous"></script>
+    <script src="main.js" type="module"></script>
 </body>
 </html>
