upgrade recipe part

--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
         </div>
         
         <!-- all recipes -->
-        <div class="col 12 recipe" id="recipes">
+        <div class="col 12 recipe row" id="recipes">
             <h1>Latest Recipes</h1>
             <!-- recipe part from js -->
         </div>
