add login, ersymbat should fix

--- a/aboutUs.html
+++ b/aboutUs.html
@@ -31,10 +31,18 @@
                         <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
                         <button class="btn btn-outline-success" type="submit">Search</button>
                     </form>
-                    <div class="">
+                    <div class="login">
                         <a href=""><button class="btn btn-primary">Sign Up</button></a>
                         <a href=""><button class="btn btn-secondary">Sign In</button></a>
                     </div>
+                    <!-- это иконка логина, если на которую нажать переходит на страницу Регистраций и Входа -->
+                    <div class="profile">
+                        <img src="https://cdn-icons-png.flaticon.com/512/1946/1946429.png" 
+                        alt="User Icon" 
+                        class="logo-icon" 
+                        onclick="redirectToPage()" />
+                    </div>
+                    <!--  -->
                 </div>
             </div>
         </nav>
