--- a/index.html
+++ b/index.html
@@ -41,11 +41,20 @@
                 </form>
 
                 <!-- buttons for sign up and sing in -->
-                <div class="">
-                    <a href=""><button class="btn btn-primary">Sign Up</button></a>
-                    <a href=""><button class="btn btn-secondary">Sign In</button></a>
+                <div class="login">
+                    <button class="btn btn-primary" id="login">Sign Up</button>
+                    <button class="btn btn-secondary" id="register">Sign In</button>
                 </div>
               </div>
+
+              <!-- это иконка логина, если на которую нажать переходит на страницу Регистраций и Входа -->
+              <div class="profile" id="profile">
+                <img src="https://cdn-icons-png.flaticon.com/512/1946/1946429.png" 
+                alt="User Icon" 
+                class="logo-icon" 
+                onclick="redirectToPage()" />
+            </div>
+            <!--  -->
             </div>
           </nav>
     </header>
@@ -116,5 +125,6 @@
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js" integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.min.js" integrity="sha384-0pUGZvbkm6XF6gxjEnlmuGrJXVbNuzT9qBBavbLwCsOGabYfZo0T0to5eqruptLy" crossorigin="anonymous"></script>
     <script src="main.js" type="module"></script>
+    <script src="login.js"></script>
 </body>
 </html>
