--- a/Login Register.html
+++ b/Login Register.html
@@ -6,7 +6,6 @@
     <title>Login & Register</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="login.css">
-    
 </head>
 <body>
 <div class="form-container">
@@ -23,9 +22,9 @@
                 <label for="login-password" class="form-label">Password</label>
                 <input type="password" class="form-control" id="login-password" placeholder="Enter your password">
                 </div>
-                <button class="btn btn-green w-100" id="login_btn" onclick="Login()">Login</button>
+                <button type="submit" class="btn btn-green w-100" onclick="Login()">Login</button>
             </form>
-            <p class="text-center mt-3">Don't have an account? <span class="toggle-btn" id="toRegis" onclick="toggleForms()">Register</span></p>
+            <p class="text-center mt-3">Don't have an account? <span class="toggle-btn" onclick="toggleForms()">Register</span></p>
         </div>
 
          <!-- Register  -->
@@ -44,12 +43,29 @@
                     <label for="register-password" class="form-label">Password</label>
                     <input type="password" class="form-control" id="register-password" placeholder="Enter your password">
                 </div>
-                <button type="submit" class="btn btn-green w-100 register" id="register_btn" onclick="toggleForms()">Register</button>
+                <button type="submit" class="btn btn-green w-100 register" onclick="toggleForms()">Register</button>
             </form>
-            <p class="text-center mt-3">Already have an account? <span class="toggle-btn" id="toLogin" onclick="toggleForms()">Login</span></p>
+            <p class="text-center mt-3">Already have an account? <span class="toggle-btn" onclick="toggleForms()">Login</span></p>
          </div>
     </div>
 </div>
-<script src="login.js" type="module"></script>
+
+<!-- <script>
+    let isLogin = true;
+    function toggleForms() {
+        const forms = document.getElementById('forms');
+        if (isLogin) {
+            forms.style.transform = 'translateX(-50%)'; /* Переход на правую сторону к форме регистрации*/
+        } else {
+            forms.style.transform = 'translateX(0)'; /* Возврат к форме входа */
+        }
+        isLogin = !isLogin;
+    }
+    function Login() {
+        window.location.href = "index.html";
+    }
+</script> -->
+<script src="login.js"></script>
+
 </body>
 </html>
