--- a/aboutUs.html
+++ b/aboutUs.html
@@ -32,8 +32,8 @@
                         <button class="btn btn-outline-success" type="submit">Search</button>
                     </form>
                     <div class="login">
-                        <a href=""><button class="btn btn-primary">Sign Up</button></a>
-                        <a href=""><button class="btn btn-secondary">Sign In</button></a>
+                        <button class="btn btn-primary" onclick="loginRegister()">Sign Up</button>
+                        <button class="btn btn-secondary" onclick="loginRegister()">Sign In</button>
                     </div>
                     <!-- это иконка логина, если на которую нажать переходит на страницу Регистраций и Входа -->
                     <div class="profile">
@@ -118,7 +118,7 @@
             </ul>
         </div>
     </footer>
-
+    <script src="aboutUs.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
