--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
                 </form>
 
                 <!-- buttons for sign up and sing in -->
-                <div class="login">
+                <div class="login" id="loginRegisterBtns">
                     <button class="btn btn-primary" id="login">Sign Up</button>
                     <button class="btn btn-secondary" id="register">Sign In</button>
                 </div>
