--- a/aboutUs.html
+++ b/aboutUs.html
@@ -31,18 +31,20 @@
                         <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
                         <button class="btn btn-outline-success" type="submit">Search</button>
                     </form>
-                    <div class="login">
-                        <button class="btn btn-primary" onclick="loginRegister()">Sign Up</button>
-                        <button class="btn btn-secondary" onclick="loginRegister()">Sign In</button>
+                    <!-- buttons for sign up and sing in -->
+                    <div class="login" id="loginRegisterBtns">
+                        <button class="btn btn-primary" id="login">Sign Up</button>
+                        <button class="btn btn-secondary" id="register">Sign In</button>
                     </div>
-                    <!-- это иконка логина, если на которую нажать переходит на страницу Регистраций и Входа -->
-                    <div class="profile">
-                        <img src="https://cdn-icons-png.flaticon.com/512/1946/1946429.png" 
-                        alt="User Icon" 
-                        class="logo-icon" 
-                        onclick="redirectToPage()" />
-                    </div>
-                    <!--  -->
+                </div>
+
+                <!-- это иконка логина, если на которую нажать переходит на страницу Регистраций и Входа -->
+                <div class="profile" id="profile">
+                    <img src="https://cdn-icons-png.flaticon.com/512/1946/1946429.png" 
+                    alt="User Icon" 
+                    class="logo-icon" />
+                </div>
+                <!--  -->
                 </div>
             </div>
         </nav>
@@ -120,5 +122,6 @@
     </footer>
     <script src="aboutUs.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
+    <script src="main.js" type="module"></script>
 </body>
 </html>
