--- a/index.html
+++ b/index.html
@@ -51,8 +51,7 @@
               <div class="profile" id="profile">
                 <img src="https://cdn-icons-png.flaticon.com/512/1946/1946429.png" 
                 alt="User Icon" 
-                class="logo-icon" 
-                onclick="redirectToPage()" />
+                class="logo-icon" />
             </div>
             <!--  -->
             </div>
@@ -125,6 +124,5 @@
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js" integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.min.js" integrity="sha384-0pUGZvbkm6XF6gxjEnlmuGrJXVbNuzT9qBBavbLwCsOGabYfZo0T0to5eqruptLy" crossorigin="anonymous"></script>
     <script src="main.js" type="module"></script>
-    <script src="login.js"></script>
 </body>
 </html>
