--- a/aboutUs.html
+++ b/aboutUs.html
@@ -11,7 +11,7 @@
     <header class="col 12">
         <nav class="navbar navbar-expand-lg">
             <div class="container-fluid">
-                <a class="navbar-brand col 3" style="color: green;" href="#">CookBook</a>
+                <a class="navbar-brand col 3" style="color: green;" id="logo">CookBook</a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
                 </button>
@@ -21,7 +21,7 @@
                             <a class="nav-link" href="index.html">Home</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link active" aria-current="page" href="aboutUs.html">About us</a>
+                            <a class="nav-link active" aria-current="page" id="about" >About us</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link" href="#footer">Contact</a>
