--- a/receip.html
+++ b/receip.html
@@ -24,10 +24,10 @@
               <div class="collapse navbar-collapse col 4" id="navbarSupportedContent">
                 <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                   <li class="nav-item">
-                    <a class="nav-link active" aria-current="page" href="index.html" id="about">Home</a>
+                    <a class="nav-link active" aria-current="page" href="index.html">Home</a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link" href="aboutUs.html">About us</a>
+                    <a class="nav-link" href="aboutUs.html" id="about">About us</a>
                   </li>
                   <li class="nav-item">
                     <a class="nav-link" href="#footer">Contact</a>
@@ -61,29 +61,13 @@
     <hr>
 
     <!-- main part -->
-    <div class="container-fluid main">
-
-        <!-- special recipe -->
-        <div class="col 12 feature">
-            <h1>Featured Recipe</h1>
-            <div class="card">
-                <div class="card-body card-feature">
-                    <img src="grey.jpg" class="img" alt="..." width="150px" height="100%">
-                    <div class="info">
-                        <h5 class="card-title">Special title treatment</h5>
-                        <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
-                        <a href="#" class="btn btn-primary">Go somewhere</a>
-                    </div>
-                </div>
-              </div>
-        </div>
-        
-        <!-- all recipes -->
-        <div class="col 12 recipe row" id="recipes">
-            <h1>Latest Recipes</h1>
-            <!-- recipe part from js -->
-        </div>
+    <div class="recipe" id="recipe">
+      <!-- receip from js -->
     </div>
+
+    <br>
+    <br>
+    <br>
 
     <!-- footer part -->
     <footer class="col 12" id="footer">
@@ -123,6 +107,7 @@
 
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js" integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.min.js" integrity="sha384-0pUGZvbkm6XF6gxjEnlmuGrJXVbNuzT9qBBavbLwCsOGabYfZo0T0to5eqruptLy" crossorigin="anonymous"></script>
+    <script src="receipPage.js" type="module"></script>
     <script src="main.js" type="module"></script>
 </body>
 </html>
