--- a/index.html
+++ b/index.html
@@ -42,8 +42,8 @@
 
                 <!-- buttons for sign up and sing in -->
                 <div class="login" id="loginRegisterBtns">
-                    <button class="btn btn-primary" id="login">Sign Up</button>
-                    <button class="btn btn-secondary" id="register">Sign In</button>
+                    <button class="btn btn-success" id="login">Sign Up</button>
+                    <button class="btn btn-primary" id="register">Sign In</button>
                 </div>
               </div>
 
